--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*
 *{
     margin: 0;
     padding: 0;
@@ -11,7 +12,7 @@ body {
 .caja-1 {
     position: fixed;
     top: 300px;
-    left: 500px;
+    left: 400px;
 }
 
 .caja-sesion {
@@ -27,7 +28,7 @@ body {
 }
 
 .titulo {
-    width: 400px;
+    width: 510px;
     background: #62c0ec;
     padding: 35px;    
     border-radius: 15px;
@@ -137,4 +138,4 @@ body {
     font-size: 20px;
     font-family: 'calibri';
 }
-
+*/
