--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
     <title>
         {% block titulo %}
 
@@ -15,10 +17,11 @@
 </head>
 
 <body>
-    <nav class="nav nav-pills flex-column flex-sm-row">
+    
+    <!--<nav class="nav nav-pills flex-column flex-sm-row">
         <a class="flex-sm-fill text-sm-center nav-link " href="{{ url_for('inicio')}}">Inicio</a>
         <a class="flex-sm-fill text-sm-center nav-link" href="{{ url_for('register') }}">Crear producto</a>
-    </nav>
+    </nav>-->
     {% block contenido %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
