--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,11 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 
+div#general{
+    margin: auto;
+    width: 960px;
+    width: 800px;
+    background-color: aquamarine;
+}
