--- a/templates/inicio_sesion.html
+++ b/templates/inicio_sesion.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
+
 {% block titulo %}
-Registro usuario
+foodrosif!
 {% endblock %}
 
-
-
 {% block contenido %}
+
 <center>
-    <h1>foodrosif!</h1>
+    <h1>FOODROSIF!</h1>
 </center>
 
 <div class="">
@@ -22,28 +22,29 @@ Registro usuario
     {% endwith %}
 </div>
 
-<div class="register">
-    <h1>Registro</h1>
-    <div class="links">
-        <button><a href="{{ url_for('login') }}">Login</a></button>
-    </div>
-    <form action="{{ url_for('register') }}" method="post" autocomplete="off">
+<div class="login" id="general">
+    <h3>Iniciar sesión</h3>
+   
+    <form action="{{ url_for('login') }}" method="POST">
         <label for="username">
-            <ion-icon name="person"></ion-icon> 
-        </label>
+            <i class="fas fa-user"></i>
         <input type="text" name="usuario" placeholder="Username" id="usuario" required>
         <label for="password">
-            <ion-icon name="lock"></ion-icon>
-        </label>
+            <i class="fas fa-lock"></i>
+        </label><br>
+        <label>
         <input type="password" name="contraseña" placeholder="Password" id="contraseña" required>
-        <label for="email">
-            <ion-icon name="mail"></ion-icon>
-        </label>
-        <input type="email" name="email" placeholder="Email" id="email" required>
         <div class="msg">{{ msg }}</div>
-        <input type="submit" value="Register">
+        </label>
+        <br>
+        <input type="submit" value="Login">
+        <div class="links">
+            <a href="{{ url_for('register') }}">Registrar Cuenta</a>
+        </div>
     </form>
+
 </div>
+
 
 
 {% endblock %}
