--- a/templates/Registo-cuenta.html
+++ b/templates/Registo-cuenta.html
@@ -35,7 +35,7 @@ Registro usuario
         <label for="password">
             <ion-icon name="lock"></ion-icon>
         </label>
-        <input type="password" name="contraseña" placeholder="Password" id="contraseña" required>
+        <input type="password" name="contraseña" placeholder="Password" id="pass" required>
         <label for="email">
             <ion-icon name="mail"></ion-icon>
         </label>
