--- a/templates/......html
+++ b/templates/......html
@@ -31,17 +31,17 @@ Registro usuario
         <label for="username">
             <ion-icon name="person"></ion-icon> 
         </label>
-        <input type="text" name="usuario" placeholder="Username" id="usuario" required>
+        <input type="text" name="usuario" placeholder="Username" id="usuario" >
         <label for="password">
             <ion-icon name="lock"></ion-icon>
         </label>
-        <input type="password" name="pass" placeholder="Password" id="pass" required>
+        <input type="password" name="password" placeholder="Password" id="pass">
         <label for="email">
             <ion-icon name="mail"></ion-icon>
         </label>
-        <input type="email" name="email" placeholder="Email" id="email" required>
+        <input type="email" name="email" placeholder="Email" id="email">
         <div class="msg">{{ msg }}</div>
-        <input type="submit" value="Register">
+        <input  type="submit" value="Register">
     </form>
 </div>
 
