--- a/templates/Index.html
+++ b/templates/Index.html
@@ -5,18 +5,37 @@ foodrosif!
 {% endblock %}
 
 {% block contenido %}
-
-<center>
-    <h1>foodrosif!</h1>
-</center>
-<div class="">
-    <h1>Iniciar sesión</h1>
-    <div class="links">
-        <button><a href="{{ url_for('login') }}" class="active">Iniciar sesión</a></button>
+<section class="section-1">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand">Foodrosif!</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-md-auto">
+                <a class="nav-link" href="{{ url_for('registerEmpresa') }}">Registrar empresa</a>
+                <a class="nav-link" href="{{ url_for('login') }}">login</a>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="text-intro">
+                    <h1>Foodrosif</h1>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="text-login">
+                    
+                    
+                    
+                </div>                
+            </div>
+        </div>
     </div>
-</div>
-</div>
-
+</section>
 
 
 {% endblock %}
