--- a/templates/registroEmpresa.html
+++ b/templates/registroEmpresa.html
@@ -33,46 +33,50 @@ Registro empresa
                 </div>
 
                 <form action="{{ url_for('registerEmpresa') }}" method="POST">
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Nombre de la empresa <span class="text-danger">*</span></label>
                         <input class="form-control" type="text" name="nombre" placeholder="Nombre empresa"
                             value="{{nombre}}" />
                     </div>
 
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Descripcion <span class="text-danger">*</span></label>
                         <input class="form-control" type="text" name="descripcion" placeholder="Descripcion Empresa"
                             value="{{descripcion}}" />
                     </div>
 
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Celular <span class="text-danger">*</span></label>
                         <input class="form-control" type="text" name="celular" placeholder="Celular"
                             value="{{celular}}" />
                     </div>
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Direccion <span class="text-danger">*</span></label>
                         <input class="form-control" type="text" name="direccion" placeholder="Direccion"
                             value="{{direccion}}" />
                     </div>
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Correo electronico <span class="text-danger">*</span></label>
                         <input class="form-control" type="email" name="email" placeholder="Correo electronico"
                             value="{{email}}" />
                     </div>
-                    <div class="form-group mb-3">
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Contraseña <span class="text-danger">*</span></label>
                         <input class="form-control" type="password" name="password" placeholder="Contraseña"
                             value="{{password}}" />
                     </div>
                     <div class="msg">{{ msg }}</div>
 
-                    <div class="form-group mb-5">
+                    <div class="form-group mb-4">
                         <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3"><i class="icon ion-md-person-add lead align-middle mr-2"></i> Registrar</button>
+                        <br>
+                        <a href="{{ url_for('login') }}"><small class="d-inline-block text-muted mt-5">Iniciar sesion</small></a>
                     </div>
+                    
+                        
+                    
                 </form>
-                <a href="{{ url_for('login') }}"><small class="d-inline-block text-muted mt-5">Iniciar
-                        sesion</small></a>
+                
             </div>
         </div>
     </div>
