--- a/templates/Index.html
+++ b/templates/Index.html
@@ -9,8 +9,8 @@ foodrosif!
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand">Foodrosif!</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-md-auto">
@@ -20,19 +20,8 @@ foodrosif!
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <div class="text-intro">
-                    <h1>Foodrosif</h1>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="text-login">
-                    
-                    
-                    
-                </div>                
-            </div>
+        <div class="inicio">
+            <h1 class="titulo">Foodrosif</h1>
         </div>
     </div>
 </section>
