--- a/templates/inicioSesion.html
+++ b/templates/inicioSesion.html
@@ -13,7 +13,7 @@ foodrosif!
 
             <div class="position-absolute testimonial p-4">
                 <h3 class="font-weight-bold text-light">Foodrosif!</h3>
-                <p class="lead text-light">¡Las cartas a palma de tu mano!</p>
+                <p class="lead text-light">¡Las cartas a la palma de tu mano!</p>
             </div>
         </div>
 
