Punto 2 con lo de la imagen

--- a/templates/registroEmpresa.html
+++ b/templates/registroEmpresa.html
@@ -19,7 +19,7 @@ Registro empresa
 
         <div class="col-xl-7 col-lg-12 d-flex">
             <div class="container align-self-center p-6">
-                <h2 class="font-weight-bold">Registro empresa</h2>
+                <h2 class="font-weight-bold mb-3">Registro empresa</h2>
                 <div class="flash">
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -32,7 +32,8 @@ Registro empresa
                     {% endwith %}
                 </div>
 
-                <form action="{{ url_for('registerEmpresa') }}" method="POST">
+        
+                <form action="{{ url_for('registerEmpresa') }}"  enctype="multipart/form-data" method="POST">
                     <div class="form-group mb-2">
                         <label class="font-weight-bold">Nombre de la empresa <span class="text-danger">*</span></label>
                         <input class="form-control" type="text" name="nombre" placeholder="Nombre empresa"
@@ -46,9 +47,19 @@ Registro empresa
                     </div>
 
                     <div class="form-group mb-2">
+                        <label class="font-weight-bold">Imagen <span class="text-danger">*</span></label>
+                        <input type="file" name="imagen"/>
+                        
+                    
+                    </div>
+
+                    <div class="form-group mb-2">
                         <label class="font-weight-bold">Celular <span class="text-danger">*</span></label>
-                        <input class="form-control" type="text" name="celular" placeholder="Celular"
+                        <div class="div_file">
+                            <input class="form-control" type="text" name="celular" placeholder="Celular"
                             value="{{celular}}" />
+                        </div>
+                        
                     </div>
                     <div class="form-group mb-2">
                         <label class="font-weight-bold">Direccion <span class="text-danger">*</span></label>
@@ -68,15 +79,11 @@ Registro empresa
                     <div class="msg">{{ msg }}</div>
 
                     <div class="form-group mb-4">
-                        <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3"><i class="icon ion-md-person-add lead align-middle mr-2"></i> Registrar</button>
+                        <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3 width-100"><i class="icon ion-md-person-add lead align-middle mr-2"></i> Registrar</button>
                         <br>
                         <a href="{{ url_for('login') }}"><small class="d-inline-block text-muted mt-5">Iniciar sesion</small></a>
-                    </div>
-                    
-                        
-                    
-                </form>
-                
+                    </div>                    
+                </form>                
             </div>
         </div>
     </div>
