--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,14 @@ body {
     background-color: var(--color-dark) !important;
 }
 
+.dark-x{
+    background-color: var(--color-dark-x) !important;
+}
+
+.dark-xx{
+    background-color: var(--color-dark-xx) !important;
+}
+
 .p-6 {
     padding: 2rem 6rem;
 }
@@ -85,71 +93,23 @@ body {
     margin: 0 auto;
 }
 
-/*
+@media (max-width: 575.98px) {
+    .p-6 {
+        padding: 2rem;
+    }
 
-.navbar .navbar-brand{
-    font-size: 32px;
-    
+    .contact-box {
+        padding: 0;
+    }
+
+    .width-100 {
+        width: 100%;
+    }
 }
 
-.navbar a{
-    color: rgb(0, 0, 0) !important;
-}
+@media (max-width: 1000px){
+    .register-bg{
+        min-height: 50vh;
+    }
 
-.text{
-    color: rgb(0, 0, 0) !important;
 }
-
-.text-intro{
-    color: rgb(0, 0, 0);
-    padding-top: 100px;
-}
-
-.text-intro h1{
-    font-size: 150px;
-}
-
-.text-login{
-    color: rgb(0, 0, 0);
-    padding-top: 260px;
-}
-
-.text-login h3{
-    font-size: 60px;
-}
-
-.text-register{
-    color: rgb(0, 0, 0);
-    padding-top: 180px;
-}
-
-.text-register h3{
-    font-size: 60px;
-}
-
-.btn-outline-dark{
-    padding: 10px 16px !important;
-}
-
-.container{
-    justify-content: space-evenly;
-}
-
-.container .card{
-    border-radius: 10px;
-    box-shadow: 0 2px 2px rgba( 0, 0, 0 ,0.2);
-    overflow: hidden;
-    margin: 20px;
-    text-align: center;
-    transition: all 0.25s;
-}
-
-.container .card:hover{
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba( 0, 0, 0 ,0.2);
-}
-
-.container .card img{
-    width: 290px;
-    height: 220px;
-}*/
