--- a/templates/inicioSesion.html
+++ b/templates/inicioSesion.html
@@ -19,7 +19,7 @@ foodrosif!
 
         <div class="col-xl-7 col-lg-12 d-flex">
             <div class="container align-self-center p-6">
-                <h2 class="font-weight-bold">Iniciar sesion</h2>
+                <h2 class="font-weight-bold mb-3">Iniciar sesion</h2>
                 <div class="flash">
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -49,7 +49,7 @@ foodrosif!
                     <div class="msg">{{ msg }}</div>
 
                     <div class="form-group mb-5">
-                        <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3"><i
+                        <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3 width-100"><i
                                 class="icon ion-md-person lead align-middle mr-2"></i> login</button>
                     </div>
 
