--- a/templates/restablecerPassword.html
+++ b/templates/restablecerPassword.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
-
 {% block titulo %}
-foodrosif!
+Restablecer Contraseña
 {% endblock %}
-
-{% block contenido %}
+{%block contenido %}
 <section class="contact-box">
 
     <div class="row no-gutters bg-dark">
@@ -19,8 +17,9 @@ foodrosif!
 
         <div class="col-xl-7 col-lg-12 d-flex">
             <div class="container align-self-center p-6">
-                <h2 class="font-weight-bold mb-3">Iniciar sesion</h2>
+                <h2 class="font-weight-bold mb-3">Cambio de contraseña</h2>
                 <div class="flash">
+                    
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
                     <ul class="alert alert-danger">
@@ -32,40 +31,31 @@ foodrosif!
                     {% endwith %}
                 </div>
 
-                <form action="{{ url_for('login') }}" method="POST">
-
-                    <div class="form-group mb-3">
-                        <label class="font-weight-bold">Correo electronico <span class="text-danger">*</span></label>
-                        <input type="email" class="form-control" name="email" placeholder="Tu correo electronico"
-                            value="{{email}}">
-                    </div>
+                <form action="" method="POST">
 
                     <div class="form-group mb-3">
                         <label class="font-weight-bold">Contraseña <span class="text-danger">*</span></label>
-                        <input type="password" class="form-control" name="password" placeholder="Contraseña"
+                        <input type="password" class="form-control" name="password" placeholder="Ingresa una contraseña"
                             value="{{password}}">
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <label class="font-weight-bold">Repetir Contraseña <span class="text-danger">*</span></label>
+                        <input type="password" class="form-control" name="password_verificacion" placeholder="Repetir contraseña"
+                            value="{{password_verificacion}}">
                     </div>
                     
                     <div class="msg">{{ msg }}</div>
 
                     <div class="form-group mb-5">
                         <button type="submit" class="btn btn-outline-dark d-inline text-light mr-2 mb-3 width-100"><i
-                                class="icon ion-md-person lead align-middle mr-2"></i> login</button>
+                                class="icon ion-md-person lead align-middle mr-2"></i> Restablecer</button>
                     </div>
 
                 </form>
-                <a href="{{ url_for('restablecerPassword') }}"><small class="d-inline-block text-muted mt-5">¿Has olvidado tu contraseña?</small></a>
-                <br>
-                <a href="{{ url_for('registerEmpresa') }}"><small class="d-inline-block text-muted mt-5">Registrar
-                        empresa</small></a>
             </div>
 
         </div>
     </div>
 </section>
-
-
-
-
-
 {% endblock %}
