--- a/templates/muro.html
+++ b/templates/muro.html
@@ -4,17 +4,99 @@ Restablecer Contraseña
 {% endblock %}
 {% block contenido %}
 <section class="contact-box">
-
     <div class="row no-gutters bg-dark">
-        <div class="col-xl-7 col-lg-12 d-flex">
+        <div class="col-xl-12 col-lg-12 d-flex">
             <div class="container align-self-center p-6">
-                
-
-            
-
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <button class="btn btn-warning" data-toggle="modal" data-target="#crearProducto">Crear
+                            producto</button>
+                        <table width="100%">
+                            <thead>
+                                <tr>
+                                    <td>ID</td>
+                                    <td>IMAGEN</td>
+                                    <td>DESCRIPCION</td>
+                                    <td>PRECIO</td>
+                                    <td>ESTADO</td>
+                                    <td>HERRAMIENTAS</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for producto in productos %}
+                                <tr>
+                                    <td>{{ producto[0] }}</td>
+                                    <td>
+                                        <img src="/static/imagenesProductos/{{ producto[1] }}" style="width: 60px;">
+                                    </td>
+                                    <td>{{ producto[2] }}</td>
+                                    <td>${{ producto[3] }}</td>
+                                    <td>{{ producto[5] }}</td>
+                                    <td>
+                                        <a href="{{ url_for('editarProducto', id=producto[0])}}" class="btn btn-primary">Editar</a>
+                                        <a href="{{ url_for('eliminarProducto', id=producto[0])}}"
+                                            class="btn btn-danger">Eliminar</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
+
+    <!--modal-->
+    <div class="modal fade" id="crearProducto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-dark">
+                    <h5 class="modal-title text-light" id="exampleModalLabel">Añadir producto</h5>
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body bg-dark">
+                    <div class="flash">
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                        <ul class="alert alert-danger">
+                            {% for message in messages %}
+                            <li>{{message}}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                        {% endwith %}
+                    </div>
+                    <form role="form" method="post" action="{{ url_for('crearProducto') }}"
+                        enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label class="col-form-label">Descripcion:</label>
+                            <input type="text" class="form-control" id="descripcion" name="descripcion">
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">Imagen:</label>
+                            <input type="file" class="form-control" id="imangen" name="imagen">
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">Precio:</label>
+                            <input type="number" step="any" class="form-control" id="precio" name="precio">
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">Estado:</label>
+                            <input type="text" class="form-control" id="estado" name="estado">
+                        </div>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                        <input name="cmdsubmit" class="btn btn-primary" type="submit" value="Agregar" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--modal2-->
+    
 </section>
 {% endblock %}
